# camorama

./: .cvsignore  .gitignore  .tm_project.cache  AUTHORS  ChangeLog  ChangeLog~  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README~  THANKS  TODO  aclocal.m4  autogen.sh  camorama-0.17-1.spec  camorama.1  camorama.appdata.xml.in  camorama.desktop  camorama.desktop.in  config.h  config.h.in  config.status  config.status.lineno  configure  configure.ac  configure.in  intltool-extract  intltool-merge  intltool-update  intltool-update.in
CVS/: Entries  Repository
Filters/: .~lock.low-and-high.ods#  low-and-high.ods
autom4te.cache/: output.0  requests  traces.0
autom4te.cache/CVS/: Repository
data/: .cvsignore  Makefile  Makefile.am  Makefile.in  camorama-gtk2.ui  camorama-gtk3.ui  camorama-gtk4.ui  camorama.glade  camorama.glade.bak  camorama.schemas  camorama.schemas.in  camorama.ui  org.gnome.camorama.gschema.xml  org.gnome.camorama.gschema.xml.in
data/CVS/: Entries  Repository
data/pixmaps/: snap-icon-small.xpm  snap-icon.xpm
data/pixmaps/CVS/: Entries  Repository  Root
data1/camorama/: camorama.glade
macros/: ChangeLog  autogen.sh  gnome-bonobo-check.m4
macros/CVS/: Entries  Repository
pixmaps/: Makefile  Makefile.am  Makefile.in  camorama.xpm
pixmaps/CVS/: Entries  Repository
po/: .intltool-merge-cache  ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile~  Makevars  POTFILES  POTFILES.in  POTFILES~  am.gmo  am.po  ar.gmo  ar.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.gmo  dz.po  en_CA.gmo  en_CA.po  en_CA.po~  en_GB.gmo  en_GB.po  en_GB.po~  es.gmo  es.po  (+70 more)
po/CVS/: Entries  Repository
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  camorama  camorama-display.c  camorama-display.c~  camorama-display.h  camorama-filter-chain.c  camorama-filter-chain.h  camorama-filter-laplace.c  camorama-filter-mirror.c  camorama-filter-mirror.c~  camorama-filter-reichardt.c  camorama-globals.h  camorama-stock-images.h  camorama-stock-items.c  camorama-stock-items.h  camorama-window.c  camorama-window.c~  camorama-window.h  fileio.c  fileio.h  filter.c  filter.h  filters.h  font_6x11.h  glib-helpers.h  interface.h  main.c  support.c  support.h  v4l.c  v4l.h
src/.deps/: callbacks.Po  camorama-display.Po  camorama-filter-chain.Po  camorama-filter-laplace.Po  camorama-filter-mirror.Po  camorama-filter-reichardt.Po  camorama-stock-items.Po  camorama-window.Po  fileio.Po  filter.Po  main.Po  support.Po  v4l.Po
src/CVS/: Entries  Repository  Root
