AC_PREREQ(2.53)
AC_INIT(camorama,0.17, http://bugzilla.gnome.org/enter_bug.cgi?product=camorama)
AC_CONFIG_SRCDIR(src/main.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AC_PROG_INTLTOOL([0.21])

AC_DEFINE(PACKAGE, AC_PACKAGE_NAME, [package name])
AC_DEFINE(VERSION, AC_PACKAGE_VERSION, [package version])

ALL_LINGUAS="am be cs da de es fa fr ml nl no pl pt pt_BR sr sr@Latn sv uk vi ja"
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_DEFINE(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", "blah blah blah")


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/ioctl.h unistd.h linux/videodev.h png.h glade/glade.h])

GNOME_COMPILE_WARNINGS

pkg_modules="gdk-pixbuf-2.0 gdk-pixbuf-xlib-2.0 libgnomeui-2.0 gtk+-2.0 >= 1.3.13 gconf-2.0 libglade-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_DEFINE(HAVE_GCONF,1,[Build with gconf support])

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2


AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
pixmaps/Makefile
po/Makefile.in
])

